--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-public/bin
-public/videos
+public/bin/*.exe
+public/videos/*.mp4
+public/videos/*.jpg
 
